--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
                <input type="email" placeholder="Digite o seu e-mail" id="email">
             </div>
             <div class="input-box">
-                <label for="senha">E-mail</label>
-                <a href="">esqueceu a senha?</a>
+                <div>
+                    <label for="senha">senha</label>
+                    <a href="">esqueceu a senha?</a>
+                </div>
                 <input type="password" placeholder="Digite a sua senha" id="senha">
             </div>
             <button>Entrar</button>
