--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>vertigo</title>
 </head>
 <body>
+    <div class="conteudo">
     <header>
         <img src="./imagens/logo.png" alt="logo">
     </header>
@@ -41,5 +42,6 @@
     
         </section>
     </main>
+   </div>
 </body>
 </html>
