inserção do background desktop

--- a/index.html
+++ b/index.html
@@ -43,5 +43,8 @@
         </section>
     </main>
    </div>
+   <div class="bg-desktop">
+    <img src="./imagens/Rectangle 1.png" alt="background desktop">
+   </div>
 </body>
 </html>
